new_tests/semantics/type/good/001_GLOBAL_1.cm

def global a:Int = 5
def global b:Char = 'c'
def global c:Bool = True
def global d:Real = 3.14
def global e:String = 'hi there'

def const f:Int = 1
def const g:Char = 'd'
def const h:Bool = False
def const i:Real = 1.341
def const j:String = 'hello'
