new_tests/semantics/type/bad/049_NE1.cm

class myClass {
    public a:Int
    public b:Real
    public c:String
}

def myObj:myClass = new myClass(a=100.32432, b=3.14, c='hi')
